@@ -28,6 +28,7 @@ public final class Skills {
 		MONSTER_RIDING = 1004,
 		ECHO_OF_HERO = 1005,
 
+		IMPROVED_HP_RECOVERY = 1000000,
 		IMPROVED_MAXHP_INCREASE = 1000001,
 		IRON_BODY = 1001003,
 
